# e-soh

./: .gitignore  .pre-commit-config.yaml  README.md  datastore.proto  docker-compose.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
ingest/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  unit.Dockerfile
ingest/api/: api_metrics.py  cf_standard_names_v84.txt  datastore.py  generate_standard_name.py  generate_wis2_payload.py  grpc_putter.py  ingest.py  main.py  messages.py  model.py  send_mqtt.py  std_name_units.json  test_app.py  utilities.py  wis2_model.py
ingest/examples/: 20221231_meta.json  README.md  air_temperature_gullingen_skisenter-parent_meta.json  test1.json  write_example_json.py
ingest/src/: app.py  model.py
ingest/src/esoh/: datastore_pb2.py  datastore_pb2_grpc.py
ingest/src/esoh/api/: app.py  generate_standard_name.py  model.py  test_app.py
ingest/src/esoh/ingest/: datastore.py  main.py  messages.py  send_mqtt.py
ingest/src/esoh/schemas/: bufr_to_e_soh_message.json  e-soh-ingest-spec.json  e-soh-message-spec.json  institution_mapping.json  netcdf_to_e_soh_message_metno.json
ingest/src/ingest/: datastore.py  main.py
ingest/src/ingest/bufr/: CountryCodes.h  Descriptor.cpp  Descriptor.h  ESOHBufr.cpp  ESOHBufr.h  LogBuffer.cpp  LogBuffer.h  LogEntry.cpp  WSI.h  (+15 more)
ingest/test/: test_automatic_filetype_detection.py  test_datastore_ingest.py  test_ingest_to_pipeline_errors.py  test_main.py  test_verify_json_payloads.py
ingest/test/test_data/: test1.json  test_payload.json
(+450 files in other folders)
