[build-system]
requires = ["setuptools", "setuptools-scm", "pybind11~=2.6.1", "build"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
	"xarray == 2023.7.0",
	"netCDF4 ~= 1.6.4",
	"numpy ~= 1.25.2",
	"paho-mqtt ~= 1.6.1",
	"jsonschema ~= 4.19.0",
	"pybind11 ~= 2.11.1",
	"protobuf ~= 4.24.3",
	"grpcio == 1.59.0",
]
name = "esoh"
description = "This project is made for parsing and publishing metadata to the E-SOH project."
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"esoh.schemas" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = "."


[tool.cibuildwheel]
build-frontend = "build"
build = ["cp310-manylinux_x86_64"]


[tool.cibuildwheel.linux]
before-all = "yum install -y rapidjson-devel"
